styles.css
/* ... */
.wunderbyte-table-table th[data-sortable].asc::before {
    opacity: 1;
}

.wunderbyte-table-table th[data-sortable]::before {
    content: "\f0de";
    font: var(--fa-font-solid);
    font-size: 14px;
    font-family: 'FontAwesome', 'Font Awesome 6 Free';
    top: 35%;
    right: 0;
}

.wunderbyte-table-table th[data-sortable]::after {
    content: "\f0dd";
    font: var(--fa-font-solid);
    font-size: 14px;
    font-family: 'FontAwesome', 'Font Awesome 6 Free';
    top: 40%;
}

.wunderbyte-table-table .scroll-y {
    height: 600px;
    border: 1px solid #dee2e6;
    overflow: auto;
}

/* Set header to stick to the top of the container. */
.wunderbyte-table-table .scroll-y thead tr th {
    position: sticky;
    top: 0;
    background-color: #fff;
}

.wunderbyteTableSearch {
    text-align: right;
    max-width: 250px;
    margin-left: auto;
}

.wunderbyte_table_container aside.inactive {
    margin-left: -500px;
    height: 0;
    display: none;
}

.wunderbyte-table-grid {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
    padding: 10px;
    gap: 20px;
}

.wunderbyte_table_filter_on .wunderbyte-table-grid {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
    padding: 10px;
    gap: 20px;
}

/* FILTER */
.wunderbyteTableFilter .mb-3 .collapse {
    padding-left: 16px;
}

.wunderbyteTableFilter ul {
    overflow-y: auto;
    /* Show all filters without scrollbar. */
    /* max-height: 20.5rem; */
}

.wunderbyteTableFilter .collapse-accordion-toggle[aria-expanded=true] span svg:not(:first-child) {
    display: none;
}

.wunderbyteTableFilter .collapse-accordion-toggle[aria-expanded=false] span svg:not(:last-child) {
    display: none;
}

.wunderbyteTableFilter li {
    position: relative;
    display: block;
    min-height: 1.6rem;
    padding-left: 2rem;
}

.wunderbyteTableFilter .form-check-label {
    color: #5f6b76;
    font-size: 1rem;
    padding-left: 6px;
    position: relative;
    margin-bottom: 0;
    vertical-align: top;
}

.wunderbyteTableFilter .form-check-input,
.wunderbyteTableFilter .form-check .form-check-input[type="checkbox"] {
    position: absolute;
    left: 0;
    z-index: 30000001;
    width: 20px;
    height: 1.3rem;
    opacity: 0;
    margin-left: 0;
}

.wunderbyteTableFilter :checked ~ .form-check-label::before {
    border-color: #090761;
}

.wunderbyteTableFilter :checked ~ .form-check-label::after {
    background-color: #090761;
    border-radius: 3px;
}

.wunderbyteTableFilter .form-check-label::after {
    top: 0.55rem;
    background: 0 0;
    border-radius: 3px;
    left: -1.5rem;
    width: 0.5rem;
    height: 0.5rem;
    content: "";
    position: absolute;
    z-index: 200000;
}

.wunderbyteTableFilter .form-check-label::before {
    position: absolute;
    top: 0.3rem;
    left: -1.75rem;
    display: block;
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    content: "";
    background-color: transparent;
    border: #e7e7ec solid 1px;
    border-radius: 3px;
    z-index: 200000;
}

.wunderbyte-table-grid .list-group-item {
    box-shadow: 0 .5rem .937rem rgba(140, 152, 164, .1);
}

.wunderbyte-table-grid .grid-entry {
    display: grid;
    grid-template-rows: 1fr 1fr 1fr 1fr;
    grid-template-columns: 1fr 1fr 1fr;
    border: 1px solid;
    padding: 20px;
    border-radius: 5px;
    margin: 20px;
}

/* FILTER */
.wunderbyteTableFilter .mb-3 .collapse {
    padding-left: 16px;
}

.wunderbyteTableFilter .filtertitle {
    font-size: large;
}

.wunderbyteTableFilter ul {
    overflow-y: auto;
    /* Show all filters without scrollbar. */
    /* max-height: 20.5rem; */
}

.wunderbyteTableFilter .collapse-accordion-toggle[aria-expanded=true] span svg:not(:first-child) {
    display: none;
}

.wunderbyteTableFilter .collapse-accordion-toggle[aria-expanded=false] span svg:not(:last-child) {
    display: none;
}

.wunderbyteTableFilter button {
    border-width: 0;
    background-color: transparent;
    width: 100%;
    outline: 0;
    box-shadow: none;
}

.wunderbyteTableFilter li {
    position: relative;
    display: block;
    min-height: 1.6rem;
    padding-left: 2rem;
}
.wunderbyteTableFilter :checked ~ .form-check-label::before {
    border-color: #090761;
}

.wunderbyteTableFilter :checked ~ .form-check-label::after {
    background-color: #090761;
    border-radius: 3px;
}
.wunderbyteTableFilter .form-check-label::after {
    top: 0.55rem;
    background: 0 0;
    border-radius: 3px;
    left: -1.5rem;
    width: 0.5rem;
    height: 0.5rem;
    content: "";
    position: absolute;
    z-index: 200000;
}

.wunderbyteTableFilter .form-check-label::before {
    position: absolute;
    top: 0.3rem;
    left: -1.75rem;
    display: block;
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    content: "";
    background-color: transparent;
    border: #e7e7ec solid 1px;
    border-radius: 3px;
    z-index: 200000;
}

.inactivefilter .wunderbyte_table_container {
    grid-template-columns: 0fr 2fr;
    gap: 0;
}

.wunderbyteTableSelect .sortcolumn {
    width: max-content;
    height: 36px;
    border-radius: 10px;
    border-color: darkgray;
    padding-left: 5px;
}

.wunderbyteTableSelect a.changesortorder:hover {
    text-decoration: none;
}

.wunderbyte-table-table .wb-table-column {
    z-index: 2;
}

.wunderbyteTableFilter .datepickerform {
    margin: 20px;
    padding: 10px;
    position: relative;
    display: block;
    min-height: 1.6rem;
    padding-left: 2rem;
}

.wunderbyteTableFilter .datepicker-label {

    color: #5f6b76;
    font-size: 1rem;
    padding-top: 6px;
    padding-left: 6px;
    position: relative;
    margin-bottom: 6px;
    vertical-align: top;
}

.wunderbyteTableFilter .datepicker-input {

    color: #5f6b76;
    padding-left: 6px;
    border: #5f6b76;
}

.wunderbyteTableFilter .datepicker-input:hover {
    box-shadow: 0 0 1px 1px #5f6b76;
}
/* ... */

